--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
+@media(max-width: 400px) {
+    nav {
+    margin: 0;
+    overflow: hidden;
+    background: #333;
+    text-align: center;
+}
+
+nav ul {
+    margin: 0 auto;
+    padding: 0;
+    display:block;
+}
+
+nav ul li {
+    display:block;
+    list-style-type: none;
+    float: left;
+    clear: both;
+}
+
+nav > ul > li > a {
+    color: #aaa;
+    display: block;
+    line-height: 1.5em;
+    padding: 0.2em 0.5em;
+    text-decoration: none;
+}
+
+}
+
 body{
     margin: 0 auto;
     padding: 0 20px;
